# mLeanOpengl

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LuaTest.cpp  Makefile  README.md  Readme.md  Test.lua  a.out  cmake_install.cmake  compile_commands.json  cpp2l  hello.cpp  main  main.cpp  makefile  run.sh
Engine/: CMakeLists.txt
Engine/include/: EngineVersion.h
Engine/include/AI/: AI_Crab.h
Engine/include/actionSwitch/: ActionSwitch.h
Engine/include/animFrameSet/: AnimAction.h  AnimActionPos.h  AnimFrameSet.h  calc_colliPoints.h  load_and_divide_png.h
Engine/include/blueprint/: PlotBlueprint.h  YardBlueprint.h  blueprint.h  blueprintId.h  blueprint_oth.h
Engine/include/circuitBoard/: CircuitBoard.h
Engine/include/collision/: ColliderType.h  collide_oth.h
Engine/include/color/: ColorTable.h
Engine/include/dataBase/: dataBase.h
Engine/include/dynamicParam/: DyBinary.h
Engine/include/ecoSys/: DensityPool.h  EcoObjMemState.h  EcoSysPlanType.h
Engine/include/gameObj/: DiskGameObj.h  FloorGoType.h  GameObj.h  GameObjPos.h  PubBinary.h  PubBinary2.h
Engine/include/gl/: gl_funcs.h
Engine/include/input/: DirAxes.h  InputINS.h  Joystick.h  JoystickButton_2_GameKey_map.h  KeyBoardKey_2_GameKey_map.h  Mouse.h  input.h
Engine/include/json/: json_oth.h
Engine/include/map/: MapEnt.h  MapField.h  Quad.h  chunkKey.h  fieldKey.h  occupyWeight.h  sectionKey.h
Engine/include/mesh/: ChildMesh.h  GameObjMesh.h  Mesh.h
Engine/include/move/: Move.h  SpeedLevel.h
Engine/include/player/: GameArchive.h
Engine/include/random/: GameSeed.h  PerlinNoise1D.h
Engine/include/renderPool/: GroundRenderPool.h  RenderPool.h
Engine/include/resource/: esrc_animFrameSet.h  esrc_canvas.h  esrc_chunk.h  esrc_colorTableSet.h  esrc_coordinate.h  esrc_ecoObj.h  esrc_ecoObjMemState.h  esrc_field.h  esrc_gameSeed.h  esrc_job_chunk.h  esrc_job_ecoObj.h  esrc_shader.h
Engine/include/scene/: sceneLoop.h
Engine/include/script/: ScriptBuf.h
Engine/include/shaderProgram/: ShaderProgram.h  ShaderType.h  ubo_all.h
Engine/include/time/: TimeBase.h  WindClock.h
Engine/include/tools/: Behaviour.h  BoolBitMap.h  FloatVec.h  IntVec.h  RGBA.h
Engine/include/tprDebug/: slicePic.h  tprAssert.h  tprCast.h
Engine/src/: EngineVersion.cpp
Engine/src/AI/: AI_Crab.cpp
Engine/src/UI/: CMakeLists.txt  UIGoSpecFromJson.cpp
Engine/src/VAOVBO/: CMakeLists.txt
Engine/src/actionFSM/: ActionFSM.cpp  CMakeLists.txt
Engine/src/animFrameSet/: AnimActionEName.cpp  AnimSubspecies.cpp  CMakeLists.txt  load_and_divide_png.cpp
Engine/src/blueprint/: CMakeLists.txt  PlotBlueprint.cpp  PlotJson.cpp  VillageJson.cpp  YardJson.cpp  blueprint.cpp  blueprint_inn.cpp
Engine/src/camera/: ViewingBox.cpp
Engine/src/collision/: ColliderType.cpp  Collision.cpp
Engine/src/color/: CMakeLists.txt
Engine/src/coordinate/: CMakeLists.txt  Coordinate.cpp
Engine/src/dataBase/: table_gameArchive.cpp
Engine/src/dynamicParam/: DyParam.cpp
Engine/src/ecoSys/: EcoObj.cpp  EcoSysPlan.cpp  EcoSysPlanType.cpp
Engine/src/fileIO/: CMakeLists.txt
Engine/src/gameObj/: FloorGoType.cpp  GameObj.cpp  GoAltiRange.cpp  PubBinaryValType.cpp
Engine/src/gl/: gl_support.cpp
Engine/src/input/: CMakeLists.txt  Joystick.cpp
Engine/src/json/: CMakeLists.txt
Engine/src/map/: Density.cpp  calc_mapEntAlti.cpp
Engine/src/mesh/: CMakeLists.txt  GameObjMeshSet.cpp
Engine/src/player/: CMakeLists.txt
Engine/src/random/: GameSeed.cpp  random.cpp  simplexNoise.cpp
Engine/src/renderPool/: CMakeLists.txt
Engine/src/resource/: esrc_VAOVBO.cpp  esrc_camera.cpp  esrc_canvas.cpp  esrc_chunkMemState.cpp  esrc_colorTableSet.cpp  esrc_ecoObj.cpp  esrc_ecoObjMemState.cpp  esrc_ecoSysPlan.cpp  esrc_jobQue.cpp  esrc_renderPool.cpp  esrc_state.cpp  esrc_time.cpp  scriptMain_call.cpp
Engine/src/scene/: CMakeLists.txt  sceneLoop.cpp
Engine/src/shaderProgram/: ShaderProgram.cpp  UBO_ColorTable.cpp  UBO_Seeds.cpp  UBO_Time.cpp  UBO_WorldCoord.cpp
Engine/src/sys/: main.cpp
Engine/src/time/: CMakeLists.txt
Engine/src/tools/: CMakeLists.txt
Engine/src/tprDebug/: timeLog.cpp
engin/: CMakeCache.txt  CMakeLists.txt  Camera.cpp  ClockBase.cpp  Engine.cpp  Makefile  Material.cpp  Mesh.cpp  Node.cpp  Primitive.cpp  Program.cpp  ResourceParser.cpp  Scene.cpp  Sprite.cpp  cmake_install.cmake  text.cpp
engin/graphic_glsl4.0/: CameraMove.cpp  GLNode.cpp  GLObject.cpp  GraphicGL40.cpp  Makefile  cmake_install.cmake
engin/graphic_glsl4.0/include/: Camera_01.h  Camera_mouse.h  Camera_move.h  GLObject.h  GraphicGL40.h
engin/include/: Camera.h  ClockBase.h  Common.h  Engine.h  EventBase.h  GraphicBase.h  Material.h  Mesh.h  Node.h  Primitive.h  ResourceParser.h  Scene.h  Sprite.h
engin/res/: coordinate_cube.vs  frag.sc  texture2.fs
engin/third-libs/: CMakeLists.txt  Makefile  cmake_install.cmake
engin/third-libs/json11-master/: CMakeLists.txt  Makefile
src/Engine/: CMakeLists.txt  Makefile  test.cpp
src/Engine/AI/: AI_Crab.h
src/Engine/UI/: Canvas.cpp  UIAnchor.h  UIGoJson.cpp  UIGoSpecFromJson.cpp  UIGoSpecFromJson.h
src/Engine/VAOVBO/: VAOVBO.cpp
src/Engine/actionFSM/: ActionFSM.h  CMakeLists.txt
src/Engine/actionSwitch/: ActionSwitch.cpp  ActionSwitch.h  CMakeLists.txt
src/Engine/animFrameSet/: AnimAction.cpp  AnimAction.h  AnimActionEName.cpp  AnimActionPos.cpp  AnimActionPos.h  AnimFrameSet.cpp  AnimFrameSet.h  AnimSubspecies.cpp  AnimSubspecies.h  CMakeLists.txt  animFrameSetJson.cpp  calc_colliPoints.cpp  calc_colliPoints.h  load_and_divide_png.cpp  load_and_divide_png.h
src/Engine/blueprint/: BlueprintVarType.cpp  BlueprintVarType.h  CMakeLists.txt  DPngColors.cpp  PlotBlueprint.cpp  PlotBlueprint.h  PlotJson.cpp  VillageBlueprint.cpp  VillageBlueprint.h  VillageJson.cpp  YardBlueprint.cpp  YardBlueprint.h  YardJson.cpp  blueprint.cpp  blueprint.h  blueprint_inn.cpp  blueprint_oth.h  pngParse.cpp
src/Engine/camera/: CMakeLists.txt  Camera.cpp  Camera.h  RenderLayerType.cpp  ViewingBox.cpp  ViewingBox.h
src/Engine/circuitBoard/: CMakeLists.txt  CircuitBoard.cpp  CircuitBoard.h
(+525 files in other folders)
