add_subdirectory(src/actionFSM)
add_subdirectory(src/animFrameSet)
add_subdirectory(src/actionSwitch)
add_subdirectory(src/blueprint)
add_subdirectory(src/camera)
add_subdirectory(src/circuitBoard)
add_subdirectory(src/collision)
add_subdirectory(src/color)
add_subdirectory(src/coordinate)
add_subdirectory(src/dataBase)
add_subdirectory(src/dynamicParam)
add_subdirectory(src/ecoSys)
add_subdirectory(src/fileIO)
add_subdirectory(src/gameObj)
add_subdirectory(src/gl)
add_subdirectory(src/input)
add_subdirectory(src/json)
add_subdirectory(src/map)
add_subdirectory(src/mesh)
add_subdirectory(src/move)
add_subdirectory(src/multiThread)
add_subdirectory(src/player)
add_subdirectory(src/random)
add_subdirectory(src/renderPool)
add_subdirectory(src/resource)
add_subdirectory(src/scene)
add_subdirectory(src/shaderProgram)
add_subdirectory(src/sys)
add_subdirectory(src/time)
add_subdirectory(src/tools)
add_subdirectory(src/tprDebug)
add_subdirectory(src/UI)
add_subdirectory(src/VAOVBO)

#[[
add_subdirectory(script)
add_subdirectory(affect)
add_subdirectory(AI)
]]


aux_source_directory(src DIR_version_SRCS)
add_library(version ${DIR_version_SRCS})
